--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "langchain": "^0.0.157"
+    "langchain": "^0.0.157",
+    "openai": "^4.11.0"
   }
 }
