--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "faiss-node": "^0.3.0",
     "langchain": "^0.0.157",
-    "openai": "^4.11.0"
+    "openai": "^4.11.0",
+    "pdf-parse": "^1.1.1"
   }
 }
